GAME/mm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-deployment
  labels:
    app: mm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mm
  template:
    metadata:
      labels:
        app: mm
    spec:
      containers:
      - name: mm-containers
        image: neerajpolavarapu/mm:mm
        args:  
          - "coturn.tenant-74334f-oidev.lga1.ingress.coreweave.cloud:3478"
          - "PixelStreamingUser"
          - "AnotherTURNintheroad"
        ports:
          - containerPort: 9999
            protocol: TCP
          - containerPort: 90
            protocol: TCP
          - containerPort: 9999
            protocol: UDP
          - containerPort: 90
            protocol: UDP
