GAME/ss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-containers
        image: neerajpolavarapu/ss:s
        args:  
          - "coturn.tenant-74334f-oidev.lga1.ingress.coreweave.cloud:3478"
          - "PixelStreamingUser"
          - "AnotherTURNintheroad"
        # image: neerajpolavarapu/ss:sss
        ports:
          - containerPort: 8888
            protocol: TCP
          - containerPort: 80
            protocol: TCP
          - containerPort: 8888
            protocol: UDP
          - containerPort: 80
            protocol: UDP
          - containerPort: 9999
            protocol: UDP
          - containerPort: 90
            protocol: UDP
          - containerPort: 9999
            protocol: TCP
          - containerPort: 90
            protocol: TCP
          - containerPort: 3478
            protocol: TCP
          - containerPort: 3478
            protocol: UDP
          - containerPort: 3479
            protocol: TCP
          - containerPort: 3479
            protocol: UDP
