GAME/turn.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-turn-server-pod
spec:
  containers:
    - name: my-turn-server
      image: coturn/coturn
      command:
        - turnserver
        - -a
        - -f
        - -v
        - -n
        - --no-cli
        - --no-tls
        - --no-dtls
        - -r
        - PixelStreaming
        - -u
        - PixelStreamingUser:AnotherTURNintheroad
      ports:
        - containerPort: 3478
          protocol: TCP
        - containerPort: 3478
          protocol: UDP
  #     volumeMounts:
  #       - name: turnserver-pid
  #         mountPath: /var/run/turnserver.pid
  # volumes:
  #   - name: turnserver-pid
  #     hostPath:
  #       path: /var/run/turnserver.pid
