GAME/ss_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - name: backend-port-tcp
      protocol: TCP
      port: 8888
      targetPort: 8888
    - name: backend-port-udp
      protocol: UDP
      port: 8888
      targetPort: 8888
    - name: frontend-port-tcp
      protocol: TCP
      port: 80
      targetPort: 80
    - name: frontend-port-udp
      protocol: UDP
      port: 80
      targetPort: 80
    - name: backend-port-tcp1
      protocol: TCP
      port: 9999
      targetPort: 9999
    - name: backend-port-udp1
      protocol: UDP
      port: 9999
      targetPort: 9999
    - name: frontend-port-tcp1
      protocol: TCP
      port: 90
      targetPort: 90
    - name: frontend-port-udp1
      protocol: UDP
      port: 90
      targetPort: 90
    - name: p1
      protocol: UDP
      port: 3478
      targetPort: 3478
    - name: p2
      protocol: UDP
      port: 3479
      targetPort: 3479
    - name: pp1
      protocol: TCP
      port: 3478
      targetPort: 3478
    - name: pp2
      protocol: TCP
      port: 3479
      targetPort: 3479

  type: ClusterIP
