GAME/turn_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coturn-service
spec:
  selector: 
    app: app
  ports:
    - name: p1
      protocol: TCP
      port: 3478
      targetPort: 3478
    - name: p2
      protocol: UDP
      port: 3479
      targetPort: 3479
  type: ClusterIP
