GAME/ss_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: timeapp.tenant-74334f-oidev.lga1.ingress.coreweave.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port: 
                  number: 80
