GAME/turn_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress1
spec:
  rules:
    - host: coturn.tenant-74334f-oidev.lga1.ingress.coreweave.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coturn-service
                port: 
                  number: 3478
